<resources>
    <string name="app_name">SaluDate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Notifications</string>
    <string name="menu_slideshow">Night Mode</string>
    <string name="menu">Menu</string>
    <string name="account">Account</string>
    <string name="notification">Notification</string>
    <string name="night_mode">Night mode</string>
    <string name="accounts">Account</string>
    <string name="notifications">Notification</string>
    <string name="language">Language</string>
    <string name="priSec">T and Cs</string>
    <string name="menu_language">Language</string>
    <string name="menu_prisec">TandCs</string>
    <string name="rusureh">Are you sure?</string>
    <string name="quittingh">Quitting</string>
    <string name="medicine_nameh">Medicine name</string>
    <string name="dosageh">Dosage</string>
    <string name="timeh">Time</string>
    <string name="intervalsh">Intervals of</string>
    <string name="viah">Via</string>
    <string name="penicillinh">Penicillin</string>
    <string name="ivh">IV</string>
    <string name="name_exampleh">Miguel Diaz</string>
    <string name="log_outh">Log Out</string>
    <string name="full_nameh">Full Name</string>
    <string name="phone_numberh">Phone number</string>
    <string name="birthdayh">Birthday</string>
    <string name="englishh">English (North America)</string>
    <string name="add_lenguageh">Add Lenguage</string>
    <string name="home">Home</string>
    <string name="accounth">Account</string>

    <string name="medical_test">Medical test</string>
    <string name="notes">Notes</string>
    <string name="print_qr">Print QR</string>
    <string name="print_full_patient_information">Print full patient information</string>
    <string name="vitalsigns">VitalSigns</string>
    <string name="medicine">Medicine</string>
    <string name="user">Mark Romos</string>
    <string name="information">Information</string>
    <string name="patient_age">21\nAge</string>
    <string name="health_condition">4\nHealth\nCondition</string>
    <string name="Monday">Mo</string>
    <string name="Preassure">120/80\nPressure</string>
    <string name="Tuesday">Tu</string>
    <string name="Thuesday">Th</string>
    <string name="Wendsday">We</string>
    <string name="Sunday">Su</string>
    <string name="Friday">Fr</string>
    <string name="Saturnday">Sa</string>
    <string name="Temperature">36°\nTemperature</string>
    <string name="Glucose">140\nGlucose</string>
    <string name="Bed">3\nBed</string>

    <string name="profile">profile</string>
    <string name="XD">XD</string>
    <string name="txt_patient_main">Patients</string>
    <string name="name_001">Clau Dimitri</string>
    <string name="age_001">Age: 21</string>
    <string name="bed_001">Bed: 3</string>
    <string name="name_002">Markos Mile</string>
    <string name="age_002">Age: 22</string>
    <string name="bed_002">Bed: 3</string>
    <string name="name_003">Itan Paz</string>
    <string name="age_003">Age: 13</string>
    <string name="bed_003">Bed: 13</string>
    <string name="name_004">German Aleman</string>
    <string name="age_004">Age: 18</string>
    <string name="bed_004">Bed: 22</string>
    <string name="how_would_you_like_to_register_it">How would you like to register?</string>
    <string name="TypeRegister_button">QR</string>
    <string name="TypeRegister_write">writing</string>
    <string name="full_name">Full name</string>
    <string name="manualRegister_gender">Gender</string>
    <string name="manualRegister_age">Age</string>
    <string name="manualRegister_date_birth">Birth Date</string>
    <string name="manualRegister_marital_status">Marital status</string>
    <string name="manualRegister_date">Register Date</string>
    <string name="manualRegister_check_in_time">Check in time</string>
    <string name="manualRegister_bed">Bed</string>
    <string name="manualRegister_days_of_stay">Days of stay</string>
    <string name="manualRegister_blood_type">Blood type</string>
    <string name="manualRegister_income_orientation">Income orientation</string>
    <string name="manualRegister_medical_record_number">Medical Record Number</string>
    <string name="manualRegister_medical_diagnostic">Medical diagnostic</string>
    <string name="manualRegister_health_condition">Health condintion</string>
    <string name="manualRegister_mark_ramos">Mark Ramos</string>
    <string name="manualRegister_male">Male</string>
    <string name="manualRegister__21">21</string>
    <string name="manualRegister_may_20">May 20</string>
    <string name="manualRegister_single">Single</string>
    <string name="manualRegister_june_20_2">June 20</string>
    <string name="manualRegister_june_20">June 20</string>
    <string name="manualRegister__3">3</string>
    <string name="manualRegister__1">1</string>
    <string name="manualRegister_oh">OH</string>
    <string name="manualRegister_yes">Yes</string>
    <string name="manualRegister_no_123456">No-123456</string>
    <string name="manualRegister_cancer">Cancer</string>
    <string name="manualRegister_very_serious">Very serious</string>
    <string name="manualRegister_add_medical_test">Add medical test</string>
    <string name="plusSymbol">+</string>
    <string name="backsymbol" />
    <string name="xd">xd</string>
    <string name="todo_XDDDDD">TODO</string>

    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="chart">chart</string>
    <string name="temp_b_10">Takes the patient\'s temperature in <b>bed 10.</b></string>
    <string name="medicine_bed19">It\'s time for the patient in <b>bed 19</b> to take his medicine.</string>
    <string name="medicine_bed_8">It\'s time for the patient in <b>bed 8</b> to take his medicine.</string>
    <string name="vital_signs">Vital Signs</string>
    <string name="_124_bpm">124 BPM</string>
    <string name="time">Time:</string>
    <string name="value">Value</string>
    <string name="heart_rate">Heart rate</string>
    <string name="_0">0</string>
    <string name="todo">TODO</string>
    <string name="value1">Value:</string>
    <string name="add">Add</string>
    <string name="set_alarm_in_intervals_of">Set Alarm In Intervals Of:</string>
    <string name="sugar_blood">Sugar Blood</string>
    <string name="_124_mg_dl">124 mg/dL</string>
    <string name="temperature">Temperature</string>
    <string name="_38_c">38°C</string>
    <string name="breathing_frecuency">Breathing Frecuency</string>
    <string name="_12_rmp">12 RMP</string>
    <string name="oxygenation">Oxygenation</string>
    <string name="_98_spo2">98 SpO2</string>
    <string name="blood_preasure">Blood Preasure</string>
    <string name="_120_80_mmhg">120/80 mmHg</string>
    <string name="state_3">State: 3</string>
    <string name="register_e">Register</string>
    <string name="medicine_e">Medicine</string>
    <string name="enter_search_text_e">Enter Search Text</string>
    <string name="blood_in_urine_e">Blood In Urine</string>
    <string name="done_by_dr_romo_e"><b>Done by:</b> Dr. Romo</string>
    <string name="via_oral_e"><b>Via:</b> Oral</string>
    <string name="time_7_00a_m_e"><b>Time:</b> 7:00a.m.</string>
    <string name="intervas_of_8_hours_e"><b>Intervas Of:</b> 8 hours</string>
    <string name="dosaje_20mg_e"><b>Dosaje:</b> 20mg</string>
    <string name="date_2022_10_18_e"><b>Date:</b> 2022/10/18</string>
    <string name="add_test_e">Add Test</string>
    <string name="vital_signs_e">Vital Signs</string>
</resources>