<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditUserProfile">

    <ImageButton
        android:id="@+id/btn_correct1h"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:src="@drawable/ic_correcth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/img_edith"
        android:layout_width="109dp"
        android:layout_height="106dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="84dp"
        android:background="@color/gray"
        android:src="@drawable/imgh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/pa"
        android:layout_width="409dp"
        android:layout_height="600dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_edith"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_bold"
            android:paddingBottom="10dp"
            android:text="@string/full_nameh"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTxt_personNameh"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@drawable/rounded_inputh"
                android:ems="10"
                android:hint="Mark Ramos"
                android:inputType="textPersonName"
                android:paddingStart="8dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_personah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_personah"
                app:layout_constraintBottom_toBottomOf="@+id/editTxt_personNameh"
                app:layout_constraintEnd_toEndOf="@+id/editTxt_personNameh"
                app:layout_constraintHorizontal_bias="0.953"
                app:layout_constraintStart_toStartOf="@+id/editTxt_personNameh"
                app:layout_constraintTop_toTopOf="@+id/editTxt_personNameh" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txt_phoneh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_bold"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:text="@string/phone_numberh"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTxt_Phoneh"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@drawable/rounded_inputh"
                android:ems="10"
                android:hint="202-555-0180"
                android:inputType="phone"
                android:paddingStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_phoneh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_celh"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.953"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.518" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txt_birthdayh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_bold"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:text="@string/birthdayh"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTxt_Dateh"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@drawable/rounded_inputh"
                android:ems="10"
                android:hint="2008-01-31"
                android:inputType="date"
                android:paddingStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_calendarsh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendarsh"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.953"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.518" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_backh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_backh"
        app:layout_constraintEnd_toStartOf="@+id/btn_correct1h"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>